--- a/eis-web/src/main/resources/templates/device/info/index.html
+++ b/eis-web/src/main/resources/templates/device/info/index.html
@@ -13,41 +13,66 @@
                 <span style="font-size: 24px" class="glyphicon glyphicon-open-file"></span>
                 <span style="font-size: 24px">站点信息管理</span>
             </div>
-            <div class="panel-body">
-                <div class="input-group input-group-sm col-sm-6">
-                    <!--<input type="text" class="form-control search-border" name="code" id = "search" placeholder="输入关键字搜索..."/>-->
-                    <div class="input-group-btn" >
-                        <button class="btn btn-primary" type="button" id="searchBtn" ><span class="glyphicon glyphicon-search"></span>&nbsp;刷新</button>
-                        <button class="btn btn-primary addButton" type="button"><span class="glyphicon glyphicon-plus"></span>&nbsp;新建</button>
-                    </div>
-                </div>
+            <div class="panel-body" id="window-body">
                 <!--表格组件-->
-                <div class="TableListComponent tableDiv">
-                    <table id="dictsTable" class="table table-striped table-hover">
-                        <thead>
-                            <tr>
-                                <th type="seq"  style="width: 50px" >序号</th>
-                                <th name="name">站点名称</th>
-                                <th name="model">站点型号</th>
-                                <th name="company">产权单位</th>
-                                <th name="contractor">总承包商</th>
-                                <th name="image1" fmt="toImg">站点资质1</th>
-                                <th name="image2" fmt="toImg">站点资质2</th>
-                                <th name="image3" fmt="toImg">操作资格</th>
-                                <th type="btns">
-                                    操作
-                                    <a bind="click->edit" data-original-title="修改"><span class="glyphicon glyphicon-edit text-primary"></span></a>
-                                </th>
-                            </tr>
-                        </thead>
-                        <tfoot class="none" style="display: none">
-                            <tr>
-                                <td colspan="9">
-                                    <nav th:replace="common/page::pageQsTable"></nav>
-                                </td>
-                            </tr>
-                        </tfoot>
-                    </table>
+                <div class="modal-content" id="mctn" style="overflow: auto !important;">
+                    <form class="form-horizontal" id="addForm" action="/device/info/save" method="post" enctype="multipart/form-data">
+                        <div class="modal-body col-md-12">
+                            <div class="col-md-12">
+                                <label class="col-lg-3 control-label require">站点名称:</label>
+                                <div class="col-lg-8">
+                                    <input type="hidden" class="form-control" name="id" th:value="${info.id}"/>
+                                    <input type="text" class="form-control" name="name" th:value="${info.name}"/>
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <label class="col-lg-3 control-label require">站点型号:</label>
+                                <div class="col-lg-8">
+                                    <input type="text" class="form-control" name="model" th:value="${info.model}"/>
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <label class="col-lg-3 control-label require">产权单位:</label>
+                                <div class="col-lg-8">
+                                    <input type="text" class="form-control" name="company" th:value="${info.company}"/>
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <label class="col-lg-3 control-label require">承包商:</label>
+                                <div class="col-lg-8">
+                                    <input type="text" class="form-control" name="contractor" th:value="${info.contractor}"/>
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <label class="col-lg-3 control-label require">站点资质1:</label>
+                                <div class="col-lg-8">
+                                    <img src="/images/fileUpload.png" th:src="${info.image1}" width="520" height="280" style="margin: 12px"/>
+                                    <input type="file" class="form-control " name="file1"  style="display: none"/>
+                                    <input type="hidden" class="form-control file" name="image1" th:value="${info.image1}"/>
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <label class="col-lg-3 control-label require">站点资质2:</label>
+                                <div class="col-lg-8">
+                                    <img src="/images/fileUpload.png" th:src="${info.image2}"  width="520" height="280" style="margin: 12px"/>
+                                    <input type="file" class="form-control " name="file2"  style="display: none"/>
+                                    <input type="hidden" class="form-control file" name="image2" th:value="${info.image2}"/>
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <label class="col-lg-3 control-label require">操作资格:</label>
+                                <div class="col-lg-8">
+                                    <img src="/images/fileUpload.png" th:src="${info.image3}"  width="520" height="280" style="margin: 12px"/>
+                                    <input type="file" class="form-control " name="file3"  style="display: none"/>
+                                    <input type="hidden" class="form-control file" name="image3" th:value="${info.image3}"/>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-primary confirm">修改</button>
+                            <!--<button type="button" class="btn btn-default cancel" data-dismiss="modal">取消</button>-->
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
@@ -55,5 +80,10 @@
 </div>
 <div th:replace="device/info/form::saveModalForm" style="display: none;"></div>
 <script th:src="@{/scripts/device/info-list.js}"></script>
+<script>
+    $(function () {
+        $("#window-body #mctn").css({'height': $(window).height() - 155, 'overflow-y': 'auto'});
+    });
+</script>
 </body>
 </html>
