--- a/eis-web/src/main/resources/templates/device/index.html
+++ b/eis-web/src/main/resources/templates/device/index.html
@@ -23,7 +23,7 @@
                 </div>
                 <!--表格组件-->
                 <div class="TableListComponent tableDiv">
-                    <input type="hidden" th:value="${myHost}" id="myHostName"/>
+                    <input type="hidden" th:value="${myHost.paramVal}" id="myHostName"/>
                     <table id="dictsTable" class="table table-striped table-hover">
                         <thead>
                             <tr>
