屏蔽多余的功能

--- a/eis-web/src/main/resources/templates/device/front-index.html
+++ b/eis-web/src/main/resources/templates/device/front-index.html
@@ -120,7 +120,7 @@
                             <span class="dot"></span>
                         </div>
                     </div>
-                    <a style="color: #33bbee; font-size: 1.4rem;margin: 5px">安全操作规范 ></a>
+                    <!--<a style="color: #33bbee; font-size: 1.4rem;margin: 5px">安全操作规范 ></a>-->
                 </div>
             </div>
         </div>
