修改站点二维码位置

--- a/eis-web/src/main/resources/templates/index.html
+++ b/eis-web/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
     <div th:replace="common/menu::menu"></div>
     <div class="content view-page-left">
         <div style="margin-top: 20px; height: 600px; overflow-y: auto">
-            <label><input id="text" type="text" class="form-control" value="http://192.168.99.39:8080/device/front/index"/></label>
+            <label></label>
             <button id="dl" class="btn btn-info">打印二维码</button>
             <br/>
             <div id="doc1" class="col-xs-12" style="-webkit-print-color-adjust: exact; background:rgba(207,202,204,0.03) !important;">
