--- a/eis-web/src/main/resources/templates/device/index.html
+++ b/eis-web/src/main/resources/templates/device/index.html
@@ -14,6 +14,14 @@
                 <span style="font-size: 24px">站点管理</span>
             </div>
             <div class="panel-body">
+                <label><input id="text" type="hidden" class="form-control" th:value="${myHost}"></label>
+                <div id="rowQrCode" style="display: none;position: fixed;margin:0 auto;border: #5e5e5e 1px solid;
+                 border-radius: 5px; left: 400px;top: 300px;width: 200px;height: 200px;background-color: #f0f0f0;text-align: center">
+                    <div id="device-titles" style="font-size: 24px;margin: 1px"></div>
+                    <div class="rowQrCode"></div>
+                    <button class="btn btn-primary">打印</button>
+                    <button class="btn btn-default">关闭</button>
+                </div>
                 <div class="input-group input-group-sm col-sm-6">
                     <input type="text" class="form-control search-border" name="code" id = "search" placeholder="输入编号或者地址搜索..."/>
                     <div class="input-group-btn" >
@@ -23,17 +31,22 @@
                 </div>
                 <!--表格组件-->
                 <div class="TableListComponent tableDiv">
-                    <input type="hidden" th:value="${myHost.paramVal}" id="myHostName"/>
+                    <input type="hidden" th:value="${myHost}" id="myHostName"/>
                     <table id="dictsTable" class="table table-striped table-hover">
                         <thead>
                             <tr>
                                 <th type="seq"  style="width: 50px" >序号</th>
                                 <!--<th name="id">主键</th>-->
                                 <th name="deviceCode">站点编号</th>
-                                <th name="qrCodeNo" fmt="codeToImg">二维码</th>
+                                <!--<th name="qrCodeNo" fmt="codeToImg">二维码</th>-->
                                 <th name="ipqcResult" fmt="fmtStatus">站点状态</th>
                                 <th name="ipqcUser" fmt="ipqcName">负责人</th>
                                 <th name="address">站点位置</th>
+                                <th type="btns">
+                                    操作
+                                    <a bind="click->show" data-original-title="查看"><span class="glyphicon glyphicon-eye-open text-primary"></span></a>
+                                    <!--<a bind="click->delete" data-original-title="删除"><span class="glyphicon glyphicon-trash text-danger"></span></a>-->
+                                </th>
                             </tr>
                         </thead>
                         <tfoot>
